...
                        <viewLayoutGuide key="safeArea" id="eQr-zM-aFk"/>
                    </view>
                    <navigationItem key="navigationItem" title="Saved Locations" id="eIm-YO-DZU">
                        <barButtonItem key="rightBarButtonItem" systemItem="search" id="rT6-lu-PCS">
                            <color key="tintColor" red="0.1333333333" green="0.3921568627" blue="0.1333333333" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                        <viewLayoutGuide key="safeArea" id="1Uh-ya-e98"/>
                    </view>
                    <navigationItem key="navigationItem" title="Notes" leftItemsSupplementBackButton="YES" id="z8k-HF-tR6">
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="OkU-Tg-REh">
                            <color key="tintColor" red="0.1333333333" green="0.3921568627" blue="0.1333333333" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="Notes Title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="tKC-ZV-YdA">
                                <rect key="frame" x="10" y="86" width="394" height="28"/>
                                <nil key="textColor"/>
...
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="GyD-Aw-3Kn" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Location" image="tabBar_2" id="OIJ-dz-GVC"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="SHR-uE-XjR">
...
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="mxY-Ht-qnF" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Weather" image="tabBar_1" id="KCZ-Zt-EGq"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="mWk-1Z-9Ka">
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <searchBar contentMode="redraw" searchBarStyle="minimal" placeholder="Search city" translatesAutoresizingMaskIntoConstraints="NO" id="3hF-vQ-bTo">
                                <rect key="frame" x="0.0" y="140" width="414" height="56"/>
                                <color key="barTintColor" red="0.0" green="0.066666666669999999" blue="0.2470588235" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                        <viewLayoutGuide key="safeArea" id="UaZ-ge-De0"/>
                    </view>
                    <navigationItem key="navigationItem" title="Search for a city" id="F0D-iV-DsF"/>
                    <connections>
                        <outlet property="cityTableView" destination="KUs-AP-dgx" id="Gle-bc-maw"/>
...
