...
            cityTableView.reloadData()
        }
    }
    
    func didFailWithError(error: Error) {
        print(error)
        let alert = UIAlertController(title: "City Not Found", message: "Please search for another city.",         preferredStyle: UIAlertController.Style.alert)
        alert.addAction(UIAlertAction(title: "Try again", style: UIAlertAction.Style.default, handler: { _ in
            //Cancel Action
        }))
        self.present(alert, animated: true, completion: nil)
        
    }

...
